welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
	var n=len(nums)
	var p=0
	for (pas <- 0 to (n-1)){
    if (nums(pas)==lookingFor){
      p=pas
    }
  }
  return p
}